<resources>
    <string name="app_name">WordTrainer</string>
    <string name="action_settings">Settings</string>
    <string name="unnamed">Unnamed</string>
    <string name="word">Word</string>
    <string name="translate">Translate</string>
    <string name="show_translate_button">Show translate</string>
    <string name="known_button">Known</string>
    <string name="unknown_button">Unknown</string>
    <string name="enter_the_word_title">Enter the englishWord:</string>
    <string name="word_in_english_hint">Word in English</string>
    <string name="enter_the_translate_title">Enter the translate:</string>
    <string name="translate_hint">Translate</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_main">WordListActivity</string>
    <string name="new_word">New word</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d words</string>
    <string name="start_training_words">Start training words</string>
    <string name="clear_learned_list">Clear the list of learned words</string>
    <string name="change_word">Change word</string>
</resources>
